--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,16 @@
 [core]
 	excludesfile = /home/rolandgolla/.gitignore_global
         autocrlf = input
-	editor = nvim
+    editor = nvim
+    pager = delta
 [user]
         email = rolandgolla@gmail.com
         name = Roland Golla
 [push]
         default = current
+[delta]
+    plus-style = "syntax #012800"
+    minus-style = "syntax #340001"
+    syntax-theme = Monokai Extended
+[interactive]
+    diffFilter = delta --color-only        
