--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
     pager = delta
 [user]
         email = rolandgolla@gmail.com
-        name = Roland Golla
+	name = Roland
 [push]
         default = current
 [delta]
